tests/typechecker/pass/020-fun-let-rec.hyg
let rec g: (int) -> int = fun(z: int) -> {
    if (z < 50) then {
        g(z + 1)
    } 
    else {
        z
    }
};
(g(2)): int;

let rec f: (int) -> bool = fun(z: int) -> {
    if (z < 50) then {
        f(z + 1)
    } 
    else {
        true
    }
};
(f(2)): bool

